# demo-store-graph-neo4j

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
data/: demo-dcat-shacl.ttl
