[tool.poetry]
name = "demo-store-graph-neo4j"
version = "0.1.0"
description = ""
authors = ["Vladimir Gladkii <Vladimir.Gladki@hiro-microdatacenters.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
