[tool.poetry]
name = "demo-store-graph-neo4j"
version = "0.1.0"
description = "This project demonstrates CRUD operations on a subgraph in Neo4j in the NextGen project"
authors = ["Vladimir Gladkii <Vladimir.Gladki@hiro-microdatacenters.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
rdflib = "^7.1.3"
neo4j = "^5.28.1"
matplotlib = "^3.10.1"
networkx = "^3.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
